@@ -1,3 +1,8 @@
+Sun Feb  8 19:05:24 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* include/ruby/backward/rubysig.h: extern "C" was missing.
+	  [ruby-core:21929]
+
 Sun Feb  8 18:46:15 2009  Tanaka Akira  <akr@fsij.org>
 
 	* ext/socket/ancdata.c (anc_inspect_passcred_credentials): new
